# collinear-fractals-gpu

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-docs.md  NOTICE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  explorer.js  index.css  index.html
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_validation.yml
.github/workflows/: ci.yml  pages.yml
docs/: BROWSER_QA_CHECKLIST.md  DOCUMENTATION_RIGHTS.md  IMPLEMENTATION_NOTES.md  QA_REPORT.md  RELEASE_PROCESS.md  RESPONSIBLE_USE.md  VALIDATION.md
examples/: README.md  examples.json
examples/e_c4_overlap/: config.json  metadata.json  notes.md
examples/e_c5_plane_filling/: config.json  metadata.json  notes.md
examples/finite_capture_layers_n3/: config.json  (+2 more)
gallery/: README.md  index.json
javascript/: README.md  index.js  package.json  test.js
maple/: CollinearFractals.mpl  README.md
mathematica/: CollinearFractals.wl  README.md
matlab/: README.md  collinear_fractals.m
paper_figures/: README.md  figure_metadata.json  make_all_figures.py  output_hashes.sha256
python/: LICENSE  README.md  collinear_fractals.py  pyproject.toml  test_collinear.py
qa/: explorer-prefix-smoke-test.js  kernel_equivalence_tests.js  render_smoke_tests.js
schemas/: active-piece.schema.json  certificate.schema.json  example-config.schema.json  figure-metadata.schema.json  pixel-certificate.schema.json
swift/: Package.swift  README.md
tools/: validate_bundle.py
workers/: certificate-worker.js  histogram-worker.js
(+35 files in other folders)
