[project]
name = "collinear-fractals"
version = "0.1.0a0"
description = "Companion software for collinear fractals, finite capture, and restricted polynomial roots"
authors = [{ name = "Bernat Espigulé-Pons" }]
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "fractal-geometry",
  "iterated-function-systems",
  "connectedness-loci",
  "polynomial-roots",
  "finite-capture",
  "research-software",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://espigule.github.io/collinear-fractals-gpu/"
Repository = "https://github.com/espigule/collinear-fractals-gpu"
Issues = "https://github.com/espigule/collinear-fractals-gpu/issues"
Changelog = "https://github.com/espigule/collinear-fractals-gpu/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["collinear_fractals"]

[tool.pytest.ini_options]
testpaths = ["."]
